# Encrypt_My_PLPP

./: CMakeLists.txt  cipher.cpp  cipher.h  cipher_loader.cpp  cipher_loader.h  line.cpp  line.h  main.cpp  text.cpp  text.h  text_editor.cpp  text_editor.h
include/: cipher_api.h
